ISSUE-76 - each - Move each task dispatcher, update